--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <div class="top-container">
     <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
-    <h1>I'm Faiiz</h1>
+    <h1>I'm Faiz</h1>
 
     <p>a <span class="pro"> Computer Science</span> student</p>
     <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
